Fixed embedded video issue on mobile

--- a/assets/sass/_custom.scss
+++ b/assets/sass/_custom.scss
@@ -304,6 +304,34 @@ body.body--scroll-top {
   }
 }
 
+.wp-block-embed {
+  text-align: center;
+  padding: 0 15px;
+  @include tab {
+    padding: 0 0;
+  }
+  .embed-youtube {
+    display: block;
+    max-width: 640px;
+    width: 100%;
+    margin:0 auto;
+    position: relative;
+    background-color: #000;
+    iframe {
+      position:absolute;
+      top: 0;
+      left: 0;
+      z-index: 100;
+      width: 100%!important;
+      height: 100%!important;
+    }
+    img.video-resizer {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
 #loaderdiv {
   display: none;
   position: fixed;
